# brainhack

./: .gitignore  CMakeLists.txt  README.md  hello_world.bf
.github/workflows/: cmake-multi-platform.yml
src/: cli.cpp  cli.h  compiler.cpp  compiler.h  debugger.cpp  debugger.h  interpreter.cpp  interpreter.h  io.h  main.cpp  memory.cpp  memory.h  operation.h  parser.cpp  parser.h  stdio.cpp  stdio.h  tape.cpp  tape.h
test/: compiler.cpp  interpreter.cpp  parser.cpp  tape.cpp  utils.cpp  utils.h
